--- a/source/references.bib
+++ b/source/references.bib
@@ -1,12 +1,44 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Gavin Huttley at 2020-08-20 14:51:19 +1000 
+%% Created for Gavin Huttley at 2020-08-21 09:31:14 +1000 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Zhu:2017aa,
+	Abstract = {Mutation processes differ between types of point mutation, genomic locations, cells, and biological species. For some point mutations, specific neighboring bases are known to be mechanistically influential. Beyond these cases, numerous questions remain unresolved, including: what are the sequence motifs that affect point mutations? How large are the motifs? Are they strand symmetric? And, do they vary between samples? We present new log-linear models that allow explicit examination of these questions, along with sequence logo style visualization to enable identifying specific motifs. We demonstrate the performance of these methods by analyzing mutation processes in human germline and malignant melanoma. We recapitulate the known CpG effect, and identify novel motifs, including a highly significant motif associated with A[Formula: see text]G mutations. We show that major effects of neighbors on germline mutation lie within [Formula: see text] of the mutating base. Models are also presented for contrasting the entire mutation spectra (the distribution of the different point mutations). We show the spectra vary significantly between autosomes and X-chromosome, with a difference in T[Formula: see text]C transition dominating. Analyses of malignant melanoma confirmed reported characteristic features of this cancer, including statistically significant strand asymmetry, and markedly different neighboring influences. The methods we present are made freely available as a Python library https://bitbucket.org/pycogent3/mutationmotif.},
+	Author = {Zhu, Yicheng and Neeman, Teresa and Yap, Von Bing and Huttley, Gavin A},
+	Date-Added = {2020-08-21 09:30:33 +1000},
+	Date-Modified = {2020-08-21 09:31:14 +1000},
+	Doi = {10.1534/genetics.116.195677},
+	Journal = {Genetics},
+	Journal-Full = {Genetics},
+	Pages = {843-856},
+	Pmc = {PMC5289855},
+	Pmid = {27974498},
+	Title = {Statistical Methods for Identifying Sequence Motifs Affecting Point Mutations},
+	Volume = {205},
+	Year = {2017},
+	Bdsk-Url-1 = {https://doi.org/10.1534/genetics.116.195677}}
+
+@article{Schneider:1990aa,
+	Abstract = {A graphical method is presented for displaying the patterns in a set of aligned sequences. The characters representing the sequence are stacked on top of each other for each position in the aligned sequences. The height of each letter is made proportional to its frequency, and the letters are sorted so the most common one is on top. The height of the entire stack is then adjusted to signify the information content of the sequences at that position. From these 'sequence logos', one can determine not only the consensus sequence but also the relative frequency of bases and the information content (measured in bits) at every position in a site or sequence. The logo displays both significant residues and subtle sequence patterns.},
+	Author = {Schneider, T D and Stephens, R M},
+	Date-Added = {2020-08-21 09:29:18 +1000},
+	Date-Modified = {2020-08-21 09:31:06 +1000},
+	Doi = {10.1093/nar/18.20.6097},
+	Journal = {Nucleic Acids Res},
+	Journal-Full = {Nucleic acids research},
+	Pages = {6097-100},
+	Pmc = {PMC332411},
+	Pmid = {2172928},
+	Title = {Sequence logos: a new way to display consensus sequences},
+	Volume = {18},
+	Year = {1990},
+	Bdsk-Url-1 = {https://doi.org/10.1093/nar/18.20.6097}}
 
 @article{Geertz:2010aa,
 	Abstract = {Specific binding of transcription factors (TFs) determines in a large part the connectivity of gene regulatory networks as well as the quantitative level of gene expression. A multiplicity of both experimental and computational methods is currently used to discover and characterize the underlying TF-DNA interactions. Experimental methods can be further subdivided into in vitro- and in vivo-based approaches, each accenting different aspects of TF-binding events. In this review we summarize the flexibility and performance of a selection of both types of experimental methods. In conclusion, we argue that a serial combination of methods with different throughput and data type constitutes an optimal experimental strategy.},
