ENH: added section on statistics

--- a/source/references.bib
+++ b/source/references.bib
@@ -1,12 +1,27 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Gavin Huttley at 2020-08-21 09:31:14 +1000 
+%% Created for Gavin Huttley at 2020-08-25 09:04:31 +1000 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Perezgonzalez:2015aa,
+	Author = {Perezgonzalez, Jose D.},
+	Date-Added = {2020-08-24 17:38:21 +1000},
+	Date-Modified = {2020-08-25 08:45:17 +1000},
+	Doi = {10.3389/fpsyg.2015.00223},
+	Issn = {1664-1078},
+	Journal = {Frontiers in Psychology},
+	Pages = {223},
+	Title = {{Fisher, Neyman-Pearson or NHST? A tutorial for teaching data testing}},
+	Url = {https://www.frontiersin.org/article/10.3389/fpsyg.2015.00223},
+	Volume = {6},
+	Year = {2015},
+	Bdsk-Url-1 = {https://www.frontiersin.org/article/10.3389/fpsyg.2015.00223},
+	Bdsk-Url-2 = {https://doi.org/10.3389/fpsyg.2015.00223}}
 
 @article{Zhu:2017aa,
 	Abstract = {Mutation processes differ between types of point mutation, genomic locations, cells, and biological species. For some point mutations, specific neighboring bases are known to be mechanistically influential. Beyond these cases, numerous questions remain unresolved, including: what are the sequence motifs that affect point mutations? How large are the motifs? Are they strand symmetric? And, do they vary between samples? We present new log-linear models that allow explicit examination of these questions, along with sequence logo style visualization to enable identifying specific motifs. We demonstrate the performance of these methods by analyzing mutation processes in human germline and malignant melanoma. We recapitulate the known CpG effect, and identify novel motifs, including a highly significant motif associated with A[Formula: see text]G mutations. We show that major effects of neighbors on germline mutation lie within [Formula: see text] of the mutating base. Models are also presented for contrasting the entire mutation spectra (the distribution of the different point mutations). We show the spectra vary significantly between autosomes and X-chromosome, with a difference in T[Formula: see text]C transition dominating. Analyses of malignant melanoma confirmed reported characteristic features of this cancer, including statistically significant strand asymmetry, and markedly different neighboring influences. The methods we present are made freely available as a Python library https://bitbucket.org/pycogent3/mutationmotif.},
