extend section on dotplot, including description of algorithm

--- a/source/references.bib
+++ b/source/references.bib
@@ -1,12 +1,43 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Gavin Huttley at 2020-08-25 09:04:31 +1000 
+%% Created for Gavin Huttley at 2020-08-25 15:14:07 +1000 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Gibbs:1970aa,
+	Author = {Gibbs, Adrian J. and Mcintyre, George A.},
+	Date-Added = {2020-08-25 12:41:56 +1000},
+	Date-Modified = {2020-08-25 15:14:07 +1000},
+	Doi = {10.1111/j.1432-1033.1970.tb01046.x},
+	Issn = {0014-2956},
+	Journal = {European Journal of Biochemistry},
+	Pages = {1--11},
+	Publisher = {Blackwell Publishing Ltd},
+	Title = {{The Diagram, a Method for Comparing Sequences. Its Use with Amino Acid and Nucleotide Sequences}},
+	Url = {http://doi.wiley.com/10.1111/j.1432-1033.1970.tb01046.x},
+	Volume = {16},
+	Year = {1970},
+	Bdsk-Url-1 = {http://doi.wiley.com/10.1111/j.1432-1033.1970.tb01046.x},
+	Bdsk-Url-2 = {https://doi.org/10.1111/j.1432-1033.1970.tb01046.x}}
+
+@article{Needleman:1970aa,
+	Author = {Needleman, Saul B. and Wunsch, Christian D.},
+	Date-Added = {2020-08-25 12:35:31 +1000},
+	Date-Modified = {2020-08-25 12:35:31 +1000},
+	Doi = {10.1016/0022-2836(70)90057-4},
+	Issn = {00222836},
+	Journal = {Journal of Molecular Biology},
+	Pages = {443--453},
+	Title = {{A general method applicable to the search for similarities in the amino acid sequence of two proteins}},
+	Url = {http://linkinghub.elsevier.com/retrieve/pii/0022283670900574},
+	Volume = {48},
+	Year = {1970},
+	Bdsk-Url-1 = {http://linkinghub.elsevier.com/retrieve/pii/0022283670900574},
+	Bdsk-Url-2 = {https://doi.org/10.1016/0022-2836(70)90057-4}}
 
 @article{Perezgonzalez:2015aa,
 	Author = {Perezgonzalez, Jose D.},
