major update to pairwise alignment description

--- a/source/references.bib
+++ b/source/references.bib
@@ -1,12 +1,27 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Gavin Huttley at 2020-08-25 15:14:07 +1000 
+%% Created for Gavin Huttley at 2020-08-28 12:06:17 +1000 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Gotoh:1982aa,
+	Author = {Osamu Gotoh},
+	Date-Added = {2020-08-28 12:06:16 +1000},
+	Date-Modified = {2020-08-28 12:06:16 +1000},
+	Doi = {https://doi.org/10.1016/0022-2836(82)90398-9},
+	Issn = {0022-2836},
+	Journal = {Journal of Molecular Biology},
+	Pages = {705 - 708},
+	Title = {An improved algorithm for matching biological sequences},
+	Url = {http://www.sciencedirect.com/science/article/pii/0022283682903989},
+	Volume = {162},
+	Year = {1982},
+	Bdsk-Url-1 = {http://www.sciencedirect.com/science/article/pii/0022283682903989},
+	Bdsk-Url-2 = {https://doi.org/10.1016/0022-2836(82)90398-9}}
 
 @article{Gibbs:1970aa,
 	Author = {Gibbs, Adrian J. and Mcintyre, George A.},
