ENH: molevol css styles and refs
[NEW] add support for colors by including s5 from sphinx and including
    named CSS colours
[NEW] added some refs for molevol section

--- a/source/references.bib
+++ b/source/references.bib
@@ -1,12 +1,124 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Gavin Huttley at 2020-08-28 12:06:17 +1000 
+%% Created for Gavin Huttley at 2020-08-31 16:41:22 +1000 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Simon:2020aa,
+	Author = {Simon, Helmut and Huttley, Gavin},
+	Date-Added = {2020-08-31 16:41:07 +1000},
+	Date-Modified = {2020-08-31 16:41:22 +1000},
+	Doi = {10.1534/g3.120.401335},
+	Journal = {G3: Genes|Genomes|Genetics},
+	Pages = {g3.401335.2020},
+	Publisher = {Genetics Society of America},
+	Title = {{Quantifying Influences on Intragenomic Mutation Rate}},
+	Url = {https://doi.org/10.1534/g3.120.401335},
+	Volume = {10},
+	Year = {2020},
+	Bdsk-Url-1 = {https://doi.org/10.1534/g3.120.401335}}
+
+@article{Touchon:2003aa,
+	Annote = {NULL},
+	Author = {Touchon, M and Nicolay, S and Arneodo, A and D'Aubenton-Carafa, Y and Thermes, C},
+	Date-Added = {2020-08-31 16:25:26 +1000},
+	Date-Modified = {2020-08-31 16:25:52 +1000},
+	Isbn = {0014-5793 (Print)},
+	Journal = {FEBS Lett},
+	Keywords = {*Base Composition and Base Sequence and *Genome,ARC,H},
+	Language = {eng},
+	Pages = {579--582},
+	Pmid = {14675777},
+	Title = {{{Transcription-coupled TA and GC strand asymmetries in the human genome.}}},
+	Volume = {555},
+	Year = {2003}}
+
+@article{Mrazek:1998aa,
+	Abstract = {Several bacterial genomes exhibit preference for G over C on the DNA leading strand extending from the origin of replication to the ter-region in the genomes of Escherichia coli, Mycoplasma genitalium, Bacillus subtilis, and marginally in Haemophilus influenzae, Mycoplasma pneumoniae, and Helicobacter pylori. Strand compositional asymmetry is not observed in the cyanobacterium Synechocystis sp. genome nor in the archaeal genomes of Methanococcus jannaschii, Methanobacterium thermoautotrophicum, and Archaeoglobus fulgidus. A strong strand compositional asymmetry is observed in $\beta$-type but not $\alpha$- or $\gamma$-type human herpesviruses featuring G {\textgreater} C downstream of oriL and C {\textgreater} G upstream of oriL. Dinucleotide relative abundances (i.e., dinucleotide representations normalized by the component nucleotide frequencies) are consonant with respect to the leading and lagging strands. Strand compositional asymmetry may reflect on differences in replication synthesis of the leading versus lagging strand, on differences between template and coding strand associated with transcription-coupled repair mechanisms, on differences in gene density between the two strands, on differences in residue and codon biases in relation to gene function, expression level, or operon organization, or on differences in single or context-dependent base mutational rates. The absence of strand asymmetry in the archaeal genomes may reflect the presence of multiple origins of replication.},
+	Author = {Mr{\`a}zek, Jan and Karlin, Samuel},
+	Date-Added = {2020-08-31 16:16:24 +1000},
+	Date-Modified = {2020-08-31 16:16:59 +1000},
+	Doi = {10.1073/pnas.95.7.3720},
+	Issn = {00278424},
+	Journal = {Proceedings of the National Academy of Sciences of the United States of America},
+	Pages = {3720--3725},
+	Pmid = {9520433},
+	Publisher = {National Academy of Sciences},
+	Title = {{Strand compositional asymmetry in bacterial and large viral genomes}},
+	Url = {www.pnas.org.},
+	Volume = {95},
+	Year = {1998},
+	Bdsk-Url-1 = {www.pnas.org.},
+	Bdsk-Url-2 = {https://doi.org/10.1073/pnas.95.7.3720}}
+
+@article{Coulondre:1978aa,
+	Author = {Coulondre, C and Miller, J H and Farabaugh, P J and Gilbert, W},
+	Date-Added = {2020-08-30 18:54:17 +1000},
+	Date-Modified = {2020-08-30 18:54:45 +1000},
+	Journal = {Nature},
+	Keywords = {Base Sequence Codon Cytosine/analogs {\&} derivatives,Structural Lactose/*genetics Mutagens *Mutation/d},
+	Pages = {775--780},
+	Title = {{{Molecular basis of base substitution hotspots in \emp{Escherichia coli}}}},
+	Volume = {274},
+	Year = {1978}}
+
+@article{Topal:1976aa,
+	Author = {Topal, M D and Fresco, J R},
+	Date-Added = {2020-08-30 18:05:28 +1000},
+	Date-Modified = {2020-08-30 18:05:42 +1000},
+	Journal = {Nature},
+	Pages = {285--289},
+	Pmid = {958482},
+	Title = {{Complementary base pairing and the origin of substitution mutations}},
+	Volume = {263},
+	Year = {1976}}
+
+@article{Kimura:1968aa,
+	Author = {Kimura, Motoo},
+	Date-Added = {2020-08-30 11:18:08 +1000},
+	Date-Modified = {2020-08-30 11:18:36 +1000},
+	Doi = {10.1038/217624a0},
+	File = {:Users/gavin/Library/Application Support/Mendeley Desktop/Downloaded/KIMURA - 1968 - Evolutionary Rate at the Molecular Level.pdf:pdf},
+	Isbn = {1476-4687},
+	Journal = {Nature},
+	Pages = {624--626},
+	Title = {{Evolutionary Rate at the Molecular Level}},
+	Volume = {217},
+	Year = {1968},
+	Bdsk-Url-1 = {https://doi.org/10.1038/217624a0}}
+
+@article{King:1969aa,
+	Author = {King, J L and Jukes, T H},
+	Date-Added = {2020-08-30 11:16:22 +1000},
+	Date-Modified = {2020-08-30 11:16:45 +1000},
+	Isbn = {0036-8075},
+	Journal = {Science},
+	Pages = {788--798},
+	Pmid = {5767777},
+	Title = {{Non-Darwinian evolution.}},
+	Volume = {164},
+	Year = {1969}}
+
+@article{Searls:2003aa,
+	Author = {Searls, David B. },
+	Da = {2003/08/01},
+	Date-Added = {2020-08-29 18:05:54 +1000},
+	Date-Modified = {2020-08-29 18:05:54 +1000},
+	Doi = {10.1038/nrd1152},
+	Id = {Searls2003},
+	Isbn = {1474-1784},
+	Journal = {Nature Reviews Drug Discovery},
+	Pages = {613--623},
+	Title = {Pharmacophylogenomics: genes, evolution and drug targets},
+	Ty = {JOUR},
+	Url = {https://doi.org/10.1038/nrd1152},
+	Volume = {2},
+	Year = {2003},
+	Bdsk-Url-1 = {https://doi.org/10.1038/nrd1152}}
 
 @article{Gotoh:1982aa,
 	Author = {Osamu Gotoh},
