ENH: added molevol section, both text and cogent3 sections

--- a/source/references.bib
+++ b/source/references.bib
@@ -1,12 +1,37 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Gavin Huttley at 2020-08-31 16:41:22 +1000 
+%% Created for Gavin Huttley at 2020-09-01 15:20:31 +1000 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Dickerson:1971aa,
+	Address = {GERMANY, WEST},
+	Author = {Dickerson, R E},
+	Date-Added = {2020-09-01 15:20:13 +1000},
+	Date-Modified = {2020-09-01 15:20:24 +1000},
+	Journal = {J Mol Evol},
+	Pages = {26--45},
+	Pmid = {4377446},
+	Title = {{The structures of cytochrome c and the rates of molecular evolution.}},
+	Volume = {1},
+	Year = {1971}}
+
+@article{Yu:2013aa,
+	Author = {Yu, Soojin},
+	Date-Added = {2020-09-01 15:07:45 +1000},
+	Date-Modified = {2020-09-01 15:07:45 +1000},
+	Journal = {Nature Education Knowledge},
+	Number = {2},
+	Pages = {3},
+	Title = {{Neutrality and Molecular Clocks | Learn Science at Scitable}},
+	Url = {https://www.nature.com/scitable/knowledge/library/neutrality-and-molecular-clocks-100492542/},
+	Volume = {4},
+	Year = {2013},
+	Bdsk-Url-1 = {https://www.nature.com/scitable/knowledge/library/neutrality-and-molecular-clocks-100492542/}}
 
 @article{Simon:2020aa,
 	Author = {Simon, Helmut and Huttley, Gavin},
@@ -104,7 +129,7 @@
 	Year = {1969}}
 
 @article{Searls:2003aa,
-	Author = {Searls, David B. },
+	Author = {Searls, David B.},
 	Da = {2003/08/01},
 	Date-Added = {2020-08-29 18:05:54 +1000},
 	Date-Modified = {2020-08-29 18:05:54 +1000},
