ENH: added major content for molevol section

--- a/source/references.bib
+++ b/source/references.bib
@@ -1,12 +1,148 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Gavin Huttley at 2020-09-08 08:33:25 +1000 
+%% Created for Gavin Huttley at 2020-09-22 20:14:33 +1000 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Knight:2007aa,
+	Author = {Knight, Rob and Maxwell, Peter and Birmingham, Amanda and Carnes, Jason and Caporaso, J Gregory and Easton, Brett C and Eaton, Michael and Hamady, Micah and Lindsay, Helen and Liu, Zongzhi and Lozupone, Catherine and McDonald, Daniel and Robeson, Michael and Sammut, Raymond and Smit, Sandra and Wakefield, Matthew J and Widmann, Jeremy and Wikman, Shandy and Wilson, Stephanie and Ying, Hua and Huttley, Gavin A},
+	Date-Added = {2020-09-22 20:13:55 +1000},
+	Date-Modified = {2020-09-22 20:14:33 +1000},
+	Doi = {10.1186/gb-2007-8-8-r171},
+	Journal = {Genome Biol},
+	Journal-Full = {Genome biology},
+	Number = {8},
+	Pages = {R171},
+	Pmc = {PMC2375001},
+	Pmid = {17708774},
+	Title = {{PyCogent}: a toolkit for making sense from sequence},
+	Volume = {8},
+	Year = {2007},
+	Bdsk-Url-1 = {https://doi.org/10.1186/gb-2007-8-8-r171}}
+
+@article{cite-key,
+	Abstract = {Continuous-time Markov processes are often used to model the complex natural phenomenon of sequence evolution. To make the process of sequence evolution tractable, simplifying assumptions are often made about the sequence properties and the underlying process. The validity of one such assumption, time-homogeneity, has never been explored. Violations of this assumption can be found by identifying non-embeddability. A process is non-embeddable if it can not be embedded in a continuous time-homogeneous Markov process. In this study, non-embeddability was demonstrated to exist when modelling sequence evolution with Markov models. Evidence of non-embeddability was found primarily at the third codon position, possibly resulting from changes in mutation rate over time. Outgroup edges and those with a deeper time depth were found to have an increased probability of the underlying process being non-embeddable. Overall, low levels of non-embeddability were detected when examining individual edges of triads across a diverse set of alignments. Subsequent phylogenetic reconstruction analyses demonstrated that non-embeddability could impact on the correct prediction of phylogenies, but at extremely low levels. Despite the existence of non-embeddability, there is minimal evidence of violations of the local time homogeneity assumption and consequently the impact is likely to be minor. },
+	Author = {Verbyla, Klara L and Yap, Von Bing and Pahwa, Anuj and Shao, Yunli and Huttley, Gavin A},
+	Date-Added = {2020-09-17 16:30:54 +1000},
+	Date-Modified = {2020-09-17 16:30:57 +1000},
+	Doi = {10.1371/journal.pone.0069187},
+	Journal = {PLoS One},
+	Journal-Full = {PloS one},
+	Mesh = {Algorithms; Animals; Evolution, Molecular; Humans; Introns; Markov Chains; Mice; Models, Genetic; Mutation; Nucleotides; Open Reading Frames; Phylogeny; Rats},
+	Number = {7},
+	Pages = {e69187},
+	Pmc = {PMC3728303},
+	Pmid = {23935949},
+	Pst = {epublish},
+	Title = {The embedding problem for markov models of nucleotide substitution},
+	Volume = {8},
+	Year = {2013},
+	Bdsk-Url-1 = {https://doi.org/10.1371/journal.pone.0069187}}
+
+@article{Verbyla:2013aa,
+	Author = {Verbyla, Klara L and Yap, Von Bing and Pahwa, Anuj and Shao, Yunli and Huttley, Gavin A},
+	Date-Added = {2020-09-17 16:30:19 +1000},
+	Date-Modified = {2020-09-17 16:31:36 +1000},
+	Doi = {10.1371/journal.pone.0069187},
+	Journal = {PLoS One},
+	Journal-Full = {PloS one},
+	Mesh = {Algorithms; Animals; Evolution, Molecular; Humans; Introns; Markov Chains; Mice; Models, Genetic; Mutation; Nucleotides; Open Reading Frames; Phylogeny; Rats},
+	Pages = {e69187},
+	Pmc = {PMC3728303},
+	Pmid = {23935949},
+	Pst = {epublish},
+	Title = {The embedding problem for {Markov} models of nucleotide substitution},
+	Volume = {8},
+	Year = {2013},
+	Bdsk-Url-1 = {https://doi.org/10.1371/journal.pone.0069187}}
+
+@article{Schranz:2008aa,
+	Author = {Schranz, Harold W and Yap, Von Bing and Easteal, Simon and Knight, Rob and Huttley, Gavin A},
+	Date-Added = {2020-09-17 16:03:24 +1000},
+	Date-Modified = {2020-09-17 16:03:47 +1000},
+	Doi = {10.1186/1471-2105-9-550},
+	Journal = {BMC Bioinformatics},
+	Journal-Full = {BMC bioinformatics},
+	Month = {Dec},
+	Pages = {550},
+	Pmc = {PMC2639438},
+	Pmid = {19099591},
+	Pst = {epublish},
+	Title = {Pathological rate matrices: from primates to pathogens},
+	Volume = {9},
+	Year = {2008},
+	Bdsk-Url-1 = {https://doi.org/10.1186/1471-2105-9-550}}
+
+@article{Kaehler:2015aa,
+	Abstract = {The genetic distance between biological sequences is a fundamental quantity in molecular evolution. It pertains to questions of rates of evolution, existence of a molecular clock, and phylogenetic inference. Under the class of continuous-time substitution models, the distance is commonly defined as the expected number of substitutions at any site in the sequence. We eschew the almost ubiquitous assumptions of evolution under stationarity and time-reversible conditions and extend the concept of the expected number of substitutions to nonstationary Markov models where the only remaining constraint is of time homogeneity between nodes in the tree. Our measure of genetic distance reduces to the standard formulation if the data in question are consistent with the stationarity assumption. We apply this general model to samples from across the tree of life to compare distances so obtained with those from the general time-reversible model, with and without rate heterogeneity across sites, and the paralinear distance, an empirical pairwise method explicitly designed to address nonstationarity. We discover that estimates from both variants of the general time-reversible model and the paralinear distance systematically overestimate genetic distance and departure from the molecular clock. The magnitude of the distance bias is proportional to departure from stationarity, which we demonstrate to be associated with longer edge lengths. The marked improvement in consistency between the general nonstationary Markov model and sequence alignments leads us to conclude that analyses of evolutionary rates and phylogenies will be substantively improved by application of this model.},
+	Author = {Kaehler, Benjamin D and Yap, Von Bing and Zhang, Rongli and Huttley, Gavin A},
+	Date-Added = {2020-09-17 09:22:05 +1000},
+	Date-Modified = {2020-09-17 09:23:00 +1000},
+	Journal = {Systematic Biology},
+	Pages = {281--93},
+	Pmid = {25503772},
+	Title = {{Genetic distance for a general non-stationary {Markov} substitution process.}},
+	Url = {http://www.ncbi.nlm.nih.gov/pubmed/25503772},
+	Volume = {64},
+	Year = {2015},
+	Bdsk-Url-1 = {http://www.ncbi.nlm.nih.gov/pubmed/25503772%20http://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=PMC4380038},
+	Bdsk-Url-2 = {https://doi.org/10.1093/sysbio/syu106}}
+
+@inbook{Jukes:1969aa,
+	Address = {New York},
+	Author = {Jukes, T and Cantor, C},
+	Booktitle = {Evolution of protein molecules},
+	Date-Added = {2020-09-15 10:35:30 +1000},
+	Date-Modified = {2020-09-15 10:35:30 +1000},
+	Editor = {Munro, H N},
+	Pages = {21--132},
+	Publisher = {Academic Press},
+	Title = {{Mammalian Protein Metabolism}},
+	Year = {1969}}
+
+@article{Lanave:1984aa,
+	Author = {Lanave, Cecilia and Saccone, C},
+	Date-Added = {2020-09-14 21:22:23 +1000},
+	Date-Modified = {2020-09-14 21:22:33 +1000},
+	Journal = {J Molecular Evolution},
+	Pages = {86-93},
+	Title = {{A New Method for Calculating Evolutionary Substitution Rates}},
+	Volume = {20},
+	Year = {1984}}
+
+@article{Tavare:1986aa,
+	Author = {Tavare, S},
+	Date-Added = {2020-09-14 18:19:28 +1000},
+	Date-Modified = {2020-09-14 18:19:44 +1000},
+	Journal = {Lec. Math. Life Sci.},
+	Pages = {57--86},
+	Title = {{Some probabilistic and statistical problems in the analysis of {DNA} sequences.}},
+	Volume = {17},
+	Year = {1986}}
+
+@article{Hasegawa:1985aa,
+	Author = {Hasegawa, M and Kishino, H and Yano, T},
+	Date-Added = {2020-09-14 18:17:15 +1000},
+	Date-Modified = {2020-09-15 09:15:45 +1000},
+	Journal = {J Mol Evol},
+	Pages = {160--174},
+	Title = {{Dating of the human-ape splitting by a molecular clock of mitochondrial {DNA}}},
+	Volume = {22},
+	Year = {1985}}
+
+@article{Felsenstein:1981aa,
+	Author = {Felsenstein, J},
+	Date-Added = {2020-09-11 16:39:39 +1000},
+	Date-Modified = {2020-09-11 16:39:58 +1000},
+	Journal = {J. Mol. Evol.},
+	Pages = {368--376},
+	Title = {{Evolutionary trees from DNA sequences: a maximum likelihood approach}},
+	Volume = {17},
+	Year = {1981}}
 
 @article{Dickerson:1971aa,
 	Address = {GERMANY, WEST},
@@ -105,9 +241,8 @@
 @article{Kimura:1968aa,
 	Author = {Kimura, Motoo},
 	Date-Added = {2020-08-30 11:18:08 +1000},
-	Date-Modified = {2020-08-30 11:18:36 +1000},
+	Date-Modified = {2020-09-17 09:22:13 +1000},
 	Doi = {10.1038/217624a0},
-	File = {:Users/gavin/Library/Application Support/Mendeley Desktop/Downloaded/KIMURA - 1968 - Evolutionary Rate at the Molecular Level.pdf:pdf},
 	Isbn = {1476-4687},
 	Journal = {Nature},
 	Pages = {624--626},
