DOC: added another reference

--- a/source/references.bib
+++ b/source/references.bib
@@ -7,6 +7,19 @@
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+@article{Wing:2006uf,
+	author = {Wing, Jeannette},
+	date = {2006/03/01},
+	date-added = {2021-06-28 09:32:30 +1000},
+	date-modified = {2021-06-28 09:33:35 +1000},
+	journal = {Communications of the ACM},
+	month = {03},
+	pages = {33--35},
+	title = {Computational Thinking},
+	ty = {JOUR},
+	url = {https://www.cs.cmu.edu/~15110-s13/Wing06-ct.pdf},
+	volume = {49},
+	year = {2006}}
 
 @article{Knight:2007aa,
 	Author = {Knight, Rob and Maxwell, Peter and Birmingham, Amanda and Carnes, Jason and Caporaso, J Gregory and Easton, Brett C and Eaton, Michael and Hamady, Micah and Lindsay, Helen and Liu, Zongzhi and Lozupone, Catherine and McDonald, Daniel and Robeson, Michael and Sammut, Raymond and Smit, Sandra and Wakefield, Matthew J and Widmann, Jeremy and Wikman, Shandy and Wilson, Stephanie and Ying, Hua and Huttley, Gavin A},
