ENH: added another cite

--- a/source/references.bib
+++ b/source/references.bib
@@ -448,3 +448,18 @@
 	Volume = {20},
 	Year = {2008},
 	Bdsk-Url-1 = {https://doi.org/10.1016/j.ceb.2008.03.003}}
+
+@article{Simon2020,
+abstract = {We report work to quantify the impact on the probability of human genome polymorphism both of recombination and of sequence context at different scales. We use population-based analyses of data on human genetic variants obtained from the public Ensembl database. For recombination, we calculate the variance due to recombination and the probability that a recombination event causes a mutation. We employ novel statistical procedures to take account of the spatial auto-correlation of recombination and mutation rates along the genome. Our results support the view that genomic diversity in recombination hotspots arises largely from a direct effect of recombination on mutation rather than predominantly from the effect of selective sweeps. We also use the statistic of variance due to context to compare the effect on the probability of polymorphism of contexts of various sizes. We find that when the 12 point mutations are considered separately, variance due to context increases significantly as we move from 3-mer to 5-mer and from 5-mer to 7-mer contexts. However, when all mutations are considered in aggregate, these differences are outweighed by the effect of interaction between the central base and its immediate neighbors. This interaction is itself dominated by the transition mutations, including, but not limited to, the CpG effect. We also demonstrate strand-asymmetry of contextual influence in intronic regions, which is hypothesized to be a result of transcription coupled DNA repair. We consider the extent to which the measures we have used can be used to meaningfully compare the relative magnitudes of the impact of recombination and context on mutation.},
+author = {Simon, Helmut and Huttley, Gavin},
+doi = {10.1534/g3.120.401335},
+journal = {G3: Genes|Genomes|Genetics},
+month = {jun},
+number = {8},
+pages = {g3.401335.2020},
+publisher = {Genetics Society of America},
+title = {{Quantifying Influences on Intragenomic Mutation Rate}},
+Bdsk-Url-1 = {https://doi.org/10.1534/g3.120.401335},
+volume = {10},
+year = {2020}
+}
