ENH: added ref for Box statement

--- a/source/references.bib
+++ b/source/references.bib
@@ -459,7 +459,38 @@ number = {8},
 pages = {g3.401335.2020},
 publisher = {Genetics Society of America},
 title = {{Quantifying Influences on Intragenomic Mutation Rate}},
-Bdsk-Url-1 = {https://doi.org/10.1534/g3.120.401335},
 volume = {10},
 year = {2020}
+}
+
+@article{Box1976,
+year = {1976},
+title = {{Science and Statistics}},
+author = {Box, George E P},
+journal = {Journal of the American Statistical Association},
+issn = {0162-1459},
+doi = {10.2307/2286841},
+abstract = {{Aspects of scientific method are discussed: In particular, its representation as a motivated iteration in which, in succession, practice confronts theory, and theory, practice. Rapid progress requires sufficient flexibility to profit from such confrontations, and the ability to devise parsimonious but effective models, to worry selectively about model inadequacies and to employ mathematics skillfully but appropriately. The development of statistical methods at Rothamsted Experimental Station by Sir Ronald Fisher is used to illustrate these themes.}},
+pages = {791--799},
+number = {356},
+volume = {71},
+language = {English},
+keywords = {}
+}
+
+@article{2004.Cooper,
+year = {2004},
+title = {{Characterization of Evolutionary Rates and Constraints in Three Mammalian Genomes}},
+author = {Cooper, Gregory M. and Brudno, Michael and Stone, Eric A. and Dubchak, Inna and Batzoglou, Serafim and Sidow, Arend},
+journal = {Genome Research},
+issn = {1088-9051},
+doi = {10.1101/gr.2034704},
+pmid = {15059994},
+pmcid = {PMC383297},
+abstract = {{We present an analysis of rates and patterns of microevolutionary phenomena that have shaped the human, mouse, and rat genomes since their last common ancestor. We find evidence for a shift in the mutational spectrum between the mouse and rat lineages, with the net effect being a relative increase in GC content in the rat genome. Our estimate for the neutral point substitution rate separating the two rodents is 0.196 substitutions per site, and 0.65 substitutions per site for the tree relating all three mammals. Small insertions and deletions of 1–10 bp in length (“microindels”) occur at ∼5\% of the point substitution rate. Inferred regional correlations in evolutionary rates between lineages and between types of sites support the idea that rates of evolution are influenced by local genomic or cell biological context. No substantial correlations between rates of point substitutions and rates of microindels are found, however, implying that the influences that affect these processes are distinct. Finally, we have identified those regions in the human genome that are evolving slowly, which are likely to include functional elements important to human biology. At least 5\% of the human genome is under substantial constraint, most of which is noncoding.}},
+pages = {539--548},
+number = {4},
+volume = {14},
+keywords = {},
+local-url = {file://localhost/Users/gavin/Documents/Mendeley%20Desktop/Cooper%20et%20al.%20-%202004%20-%20Characterization%20of%20Evolutionary%20Rates%20and%20Constraints%20in%20Three%20Mammalian%20Genomes.pdf}
 }
